data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2017.wast
;; 8. **Test Description:** Design a test where `br_if` branches into a `block` which calls an imported function leading to another `br_if` within nested blocks.    **Constraint Checked:** Correct relative and absolute stack handling with nested blocks and external calls.    **Relation:** Checks the maintenance of stack and control flow correctness when branching within nested blocks and calling external functions.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc))
    (func $test
      (block (result i32)
        (call $externalFunc)
        (block (result i32)
          (block (result i32)
            (br_if 0 (i32.const 1))
          )
          (i32.const 0)
        )
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)